# Portfolio-WebApp

./: .env.dist  .gitignore  README.md  compile_scss.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-production.yml
MySite/: settings.py  urls.py
MySite/templates/: base.html
Scripts/: deploy.sh
home/: middleware.py  views.py  wagtail_hooks.py
home/management/commands/: create_mock_database.py
home/migrations/: 0001_initial.py  0002_remove_homepage_l0_e_mail_remove_homepage_l1_e_mail_and_more.py  0003_alter_homepage_github_link_and_more.py  0004_basepage_remove_educationitem_enrollment_date_and_more.py  0005_alter_skilldescriptionitem_sort_order_squashed_0006_alter_portfolioitem_options_portfolioitem_sort_order.py  0007_alter_portfolioitem_options_and_more.py  0008_siterootpage.py  0009_delete_siterootpage_siterootpage.py  0010_jobitem_current_job_jobitem_show_dates.py  0011_remove_portfolioitem_github_link_and_more.py  0012_update_mysql_job_item_role_description_text_field.py
home/models/: __init__.py  referral.py
home/models/cv/: __init__.py  education_item.py  job_item.py  skill_description.py
home/models/pages/: __init__.py  base_page.py  cv_page.py  portfolio_page.py  site_root_page.py
home/models/portfolio/: __init__.py  portfolio_item.py  technology_tag.py
home/static/home/html/: 500.html  maintenance.html
home/static/home/js/: base-page.js  cv-page.js  portfolio-page.js
home/static/home/scss/: base.scss  layout.scss
home/templates/home/: base_page.html  cv_page.html  portfolio_page.html
home/templatetags/: ms_util.py
home/tests/: conftest.py
home/tests/management/: test_create_mock_database.py
home/tests/middleware/: test_token_referral_middleware.py
home/tests/models/: test_cv_models.py  test_portfolio_models.py  test_referral_models.py
home/tests/models/pages/: test_base_page.py  test_cv_page.py  test_portfolio_page.py  test_site_root_page.py
home/tests/test_management/: test_create_mock_database.py
home/tests/test_models/: test_cv_models.py  test_portfolio_models.py  test_referral_models.py
home/tests/test_pages/: test_base_page.py  test_cv_page.py
home/tests/test_templatetags/: test_ms_util.py
home/tests/test_views/: test_snippet_viewsets.py
(+11 files in other folders)
