[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Portfolio-WebApp"
version = "0.1.0"
description = "My Personal Portfolio-WebApp"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "anyascii==0.3.2",
    "asgiref==3.8.1",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "defusedxml==0.7.1",
    "Django==5.1.7",
    "django-filter==25.1",
    "django-modelcluster==6.4",
    "django-mysql==4.17.0",
    "django-permissionedforms==0.1",
    "django-sass==1.1.0",
    "django-stubs-ext==5.1.3",
    "django-taggit==6.1.0",
    "django-tasks==0.9.0",
    "django-treebeard==4.7.1",
    "djangorestframework==3.15.2",
    "draftjs_exporter==5.1.0",
    "et_xmlfile==2.0.0",
    "Faker==38.0.0",
    "filetype==1.2.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "laces==0.1.2",
    "libsass==0.23.0",
    "modelsearch==1.1.1",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pillow==11.1.0",
    "pillow_heif==1.1.1",
    "requests==2.32.3",
    "soupsieve==2.6",
    "sqlparse==0.5.3",
    "telepath==0.3.1",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wagtail==7.2.1",
    "Willow==1.12.0",
    "django-environ==0.13.0",
    "mysqlclient==2.2.8",
    "python-dateutil==2.9.0.post0"
]

authors = [
    {name = "Marian Syska", email = "marian.syska@web.de"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
]

[project.urls]
"Homepage" = "https://marian-syska.de/"
"GitHub" = "https://github.com/MarianSyska/Portfolio-WebApp.git"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "MySite.settings"
python_files = ["test_*.py"]
testpaths = ["home/tests"]

[tool.django]
TEST_RUNNER = "pytest_django.runner.PytestTestRunner"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C90",
    "DOC",
    "D",
    "ANN",
    "TC",
    "PERF",
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"